--- a/projects/vs2022/hl_cdll.vcxproj.filters
+++ b/projects/vs2022/hl_cdll.vcxproj.filters
@@ -63,7 +63,7 @@
     </Filter>
     <Filter Include="Header Files\_hl\dlls\weapons">
       <UniqueIdentifier>{c98d7745-f010-438b-9e1f-b4f217174e1f}</UniqueIdentifier>
-	</Filter>
+    </Filter>
     <Filter Include="Header Files\engine">
       <UniqueIdentifier>{ebcb0f66-49b6-4e55-9a97-f6720cade9ec}</UniqueIdentifier>
     </Filter>
@@ -75,6 +75,9 @@
     </Filter>
     <Filter Include="Source Files\cl_dll\particleman">
       <UniqueIdentifier>{7085339d-2b33-4cdf-846c-0e4c7d33add8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\engine">
+      <UniqueIdentifier>{957714e5-f6be-4b57-bbc2-9a301623dbe7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -381,6 +384,30 @@
     <ClCompile Include="..\..\cl_dll\particleman\CBaseParticle.cpp">
       <Filter>Source Files\cl_dll\particleman</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\cl_dll\bsprenderer.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\cl_dll\frustum.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\cl_dll\mirrormanager.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\cl_dll\particle_engine.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\cl_dll\propmanager.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\cl_dll\rendererdefs.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\cl_dll\textureloader.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\cl_dll\watershader.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\cl_dll\kbutton.h">
@@ -523,7 +550,7 @@
     </ClInclude>
     <ClInclude Include="..\..\dlls\weapons\CPenguin.h">
       <Filter>Header Files\_hl\dlls\weapons</Filter>
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="..\..\dlls\cdll_dll.h">
       <Filter>Header Files\cl_dll</Filter>
     </ClInclude>
